[package]
name = "named-colour"
description = """
named-colour provides Hex Codes for popular colour names.
"""
version = "0.2.0"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/named-colour"
readme = "README.md"
documentation = "https://docs.rs/named-colour"
categories = ["web-programming", "visualization"]
keywords = ["colours", "constants", "reference"]
include = ["**/*.rs", "Cargo.toml"]
edition = "2021"
rust-version = "1.65"

[features]
default = ["extended"]
extended = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = { version = "0.8.50", features = ["serde"] }

[dev-dependencies]
rstest = "0.22.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
