[workspace]
members = ["crates/named-colour"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
rust-version = "1.75"
repository = "https://github.com/jerus-org/named-colour"

[workspace.dependencies]
rgb = { version = "0.8.52", features = ["serde"] }
strum = { version = "0.27.2", features = ["derive"] }
tinyrand = "0.5.0"
rstest = "0.26.1"

[workspace.lints.clippy]
uninlined-format-args = "warn"
